# emergentDB

./: .gitignore  .mcp.json  BENCHMARKS.md  Cargo.toml  README.md  SETUP.md  agents.md  architecture.md  claude.md  gemini.md  setup-mac.md
crates/api-server/: Cargo.toml
crates/api-server/src/: handlers.rs  lib.rs  main.rs  routes.rs  tools.rs
crates/context-graph/: Cargo.toml
crates/context-graph/src/: graph.rs  lib.rs  ontology.rs  traversal.rs
crates/grep-core/: Cargo.toml  README.md  claude.md  gemini.md
crates/grep-core/examples/: benchmark_qd.rs  search_repo.rs
crates/grep-core/src/: index.rs  lib.rs  load_qd.rs  ranking.rs  repo.rs  search.rs  search_qd.rs
crates/grep-mcp/: Cargo.toml
crates/grep-mcp/src/: main.rs
crates/qd-engine/: Cargo.toml
crates/qd-engine/src/: archive.rs  behavior.rs  evolution.rs  lib.rs
crates/research-client/: Cargo.toml
crates/research-client/src/: client.rs  lib.rs  tier.rs  types.rs
crates/vector-core/: Cargo.toml  README.md
crates/vector-core/benches/: index_bench.rs
crates/vector-core/src/: distance.rs  lib.rs  simd.rs
crates/vector-core/src/index/: emergent.rs  flat.rs  hnsw.rs  ivf.rs  mod.rs  pq.rs
crates/vector-core/src/storage/: mod.rs  rocksdb_backend.rs  traits.rs
examples/: comprehensive_rag_benchmark.rs  gemini_benchmark.rs  index_benchmark.rs  pdf_benchmark.rs  rag_benchmark.rs  scale_benchmark.rs
examples/ingestion/: ingest.py  long_sample.txt  requirements.txt  sample.txt  sample2.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ArchitectureDiagram.tsx  BenchmarkBar.tsx  BenchmarkRunner.tsx  StatCard.tsx
scripts/: generate_benchmark_image.py
tests/: comprehensive_benchmark.py  comprehensive_rag_benchmark.py  db_comparison_benchmark.py  full_comparison_benchmark.py  gemini_embedding_benchmark.py  methodology.md  pdf_index_test.py  rust_index_benchmark.py  scale_comparison.py  scale_gemini_embeddings.py
tests/benchmark_results/: comparison_results.json  comprehensive_benchmark.json  full_comparison.json  scale_comparison.json
tests/pdf_data/: chunks.json  embeddings.json  results.json
