[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool call interface API server"

[[bin]]
name = "emergentdb-server"
path = "src/main.rs"

[dependencies]
vector-core = { path = "../vector-core" }
context-graph = { path = "../context-graph" }
qd-engine = { path = "../qd-engine" }
research-client = { path = "../research-client" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
