[package]
name = "grep-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for grep-core - search GitHub repos for LLM agents"

[[bin]]
name = "grep-mcp"
path = "src/main.rs"

[dependencies]
grep-core = { path = "../grep-core" }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
