[package]
name = "qd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MAP-Elites quality-diversity algorithm for query diversification"

[dependencies]
vector-core = { path = "../vector-core" }
rayon = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
