[package]
name = "research-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deep Research API client"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
